Fixed Construction Table duplication glitch and Construction Ingredient NBT not working bug.