@@ -3,9 +3,10 @@ package me.daqem.jobsplus.client.gui;
 import com.google.common.collect.Sets;
 import com.mojang.blaze3d.systems.RenderSystem;
 import com.mojang.blaze3d.vertex.PoseStack;
-import me.daqem.jobsplus.Config;
 import me.daqem.jobsplus.JobsPlus;
 import me.daqem.jobsplus.client.renderer.RenderColor;
+import me.daqem.jobsplus.common.crafting.construction.ConstructionCraftingRecipe;
+import me.daqem.jobsplus.common.crafting.construction.ConstructionRecipeType;
 import me.daqem.jobsplus.common.packet.*;
 import me.daqem.jobsplus.handlers.ChatHandler;
 import me.daqem.jobsplus.handlers.LevelHandler;
@@ -28,16 +29,20 @@ import net.minecraft.client.player.LocalPlayer;
 import net.minecraft.client.renderer.GameRenderer;
 import net.minecraft.client.renderer.entity.ItemRenderer;
 import net.minecraft.client.resources.sounds.SimpleSoundInstance;
+import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.sounds.SoundEvents;
 import net.minecraft.util.Mth;
+import net.minecraft.world.effect.MobEffect;
 import net.minecraft.world.effect.MobEffectInstance;
 import net.minecraft.world.effect.MobEffects;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.item.alchemy.PotionUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -46,10 +51,11 @@ import java.util.*;
 public class JobsScreen extends Screen {
 
     public static final ResourceLocation BACKGROUND = JobsPlus.getId("textures/gui/jobs_screen.png");
-    private final int[] array;
     private final int imageWidth = 326;
     private final int imageHeight = 166;
+    private final CompoundTag dataTag;
     ArrayList<Integer> ints = new ArrayList<>();
+    LinkedList<ItemStack> selectedJobCraftableStacks = new LinkedList<>();
     private int activeRightButton;
     private int activeLeftButton;
     private float scrollOffs;
@@ -60,15 +66,15 @@ public class JobsScreen extends Screen {
     private int jobId;
     private int selectedButton;
 
-    public JobsScreen(int[] array, int jobId, int activeLeftButton, int activeRightButton, int selectedButton, float scrollOffs, int startIndex) {
+    public JobsScreen(CompoundTag dataTag) {
         super(Component.literal("Jobs"));
-        this.array = array;
-        this.jobId = jobId;
-        this.activeLeftButton = activeLeftButton;
-        this.activeRightButton = activeRightButton;
-        this.selectedButton = selectedButton;
-        this.scrollOffs = scrollOffs;
-        this.startIndex = startIndex;
+        this.jobId = dataTag.getInt("JobID");
+        this.activeLeftButton = dataTag.getInt("ActiveLeftButton");
+        this.activeRightButton = dataTag.getInt("ActiveRightButton");
+        this.selectedButton = dataTag.getInt("SelectedButton");
+        this.scrollOffs = dataTag.getFloat("ScrollOffs");
+        this.startIndex = dataTag.getInt("StartIndex");
+        this.dataTag = dataTag;
     }
 
     public static void drawRightAlignedString(@NotNull PoseStack poseStack, Font font, @NotNull String text, int posX, int posY, int color) {
@@ -83,116 +89,110 @@ public class JobsScreen extends Screen {
         font.draw(poseStack, text, (float) (posX - font.width(text) / 2), (float) posY, color);
     }
 
-    public static boolean isNumeric(String strNum) {
-        if (strNum == null) {
-            return false;
-        }
-        try {
-            double d = Integer.parseInt(strNum);
-        } catch (NumberFormatException nfe) {
-            return false;
-        }
-        return true;
-    }
-
-//.RRRRRRRRRR........EEEEEEEEEEE...... NNN...NNNN....... DDDDDDDD......... EEEEEEEEEE...... RRRRRRRRR....
-//.RRRRRRRRRRR.......EEEEEEEEEEE...... NNNN..NNNN....... DDDDDDDDD........ EEEEEEEEEE...... RRRRRRRRRR...
-//.RRRRRRRRRRR.......EEEEEEEEEEE...... NNNN..NNNN....... DDDDDDDDDD....... EEEEEEEEEE...... RRRRRRRRRR...
-//.RRRR...RRRRR......EEEE............. NNNNN.NNNN....... DDD...DDDD....... EEE............. RRR...RRRRR..
-//.RRRR...RRRRR......EEEE............. NNNNN.NNNN....... DDD....DDDD...... EEE............. RRR...RRRRR..
-//.RRRRRRRRRRR.......EEEEEEEEEE....... NNNNNNNNNN....... DDD....DDDD...... EEEEEEEEE....... RRRRRRRRRR...
-//.RRRRRRRRRRR.......EEEEEEEEEE....... NNNNNNNNNN....... DDD....DDDD...... EEEEEEEEE....... RRRRRRRRRR...
-//.RRRRRRRR..........EEEEEEEEEE....... NNNNNNNNNN....... DDD....DDDD...... EEEEEEEEE....... RRRRRRR......
-//.RRRR.RRRR.........EEEE............. NNNNNNNNNN....... DDD....DDDD...... EEE............. RRR.RRRR.....
-//.RRRR..RRRR........EEEE............. NNN.NNNNNN....... DDD...DDDDD...... EEE............. RRR..RRRR....
-//.RRRR..RRRRR.......EEEEEEEEEEE...... NNN..NNNNN....... DDDDDDDDDD....... EEEEEEEEEE...... RRR..RRRRR...
-//.RRRR...RRRRR......EEEEEEEEEEE...... NNN..NNNNN....... DDDDDDDDD........ EEEEEEEEEE...... RRR...RRRRR..
-//.RRRR....RRRR......EEEEEEEEEEE...... NNN...NNNN....... DDDDDDDD......... EEEEEEEEEE...... RRR....RRRR..
-
     @Override
     public void render(@NotNull PoseStack poseStack, int mouseX, int mouseY, float partialTicks) {
         this.renderBackground(poseStack);
-        poseStack.pushPose();
         RenderSystem.setShader(GameRenderer::getPositionTexShader);
-        RenderSystem.setShaderColor(1.0F, 1.0F, 1.0F, 1.0F);
+        RenderColor.normal();
         RenderSystem.setShaderTexture(0, BACKGROUND);
-        startX = (this.width - imageWidth) / 2;
-        startY = (this.height - imageHeight) / 2;
-        blitThis(poseStack, 0, 0, 0, 0, imageWidth, imageHeight);
-        int k = (int) (41.0F * this.scrollOffs);
-        blitThis(poseStack, 127, 17 + k, 0, 207, 12, 15);
-        int l = this.startX + 7;
+
+        this.startX = (this.width - this.imageWidth) / 2;
+        this.startY = (this.height - this.imageHeight) / 2;
         int i1 = this.startY + 16;
         int j1 = this.startIndex + 4;
-        this.renderButtons(poseStack, mouseX, mouseY, l, i1, j1);
+
+        this.renderBackgroundImage(poseStack);
+        this.renderScrollWheel(poseStack);
+        this.renderButtons(poseStack, mouseX, mouseY, this.startX + 7, i1, j1);
         this.renderTooltip(poseStack, mouseX, mouseY);
         this.renderItems(startX, startY);
-        drawTexts(poseStack, i1, j1);
-        poseStack.popPose();
-        font.draw(poseStack, ChatColor.darkGray() + Component.translatable("jobsplus.gui.jobs").getString(), startX + 7, startY + 6, 16777215);
-        drawRightAlignedString(poseStack, font, ChatColor.darkGray() + Component.translatable("jobsplus.gui.coins.top", array[20]).getString(), startX + 140, startY + 6, 16777215);
+        this.renderTexts(poseStack, i1, j1);
         super.render(poseStack, mouseX, mouseY, partialTicks);
     }
 
-//.TTTTTTTTTTT.......OOOOOOO............OOOOOOO..........LLLL............TTTTTTTTTTT.... IIII......PPPPPPPPP.........SSSSSSS.....
-//.TTTTTTTTTTT......OOOOOOOOOO.........OOOOOOOOOO........LLLL............TTTTTTTTTTT.... IIII......PPPPPPPPPP....... SSSSSSSS....
-//.TTTTTTTTTTT.....OOOOOOOOOOOO.......OOOOOOOOOOOO.......LLLL............TTTTTTTTTTT.... IIII......PPPPPPPPPPP...... SSSSSSSSS...
-//....TTTT.........OOOOO..OOOOO.......OOOOO..OOOOO.......LLLL...............TTTT........ IIII......PPPP...PPPP..... SSS..SSSS...
-//....TTTT........ OOOO....OOOOO..... OOOO....OOOOO......LLLL...............TTTT........ IIII......PPPP...PPPP..... SSS.........
-//....TTTT........ OOO......OOOO..... OOO......OOOO......LLLL...............TTTT........ IIII......PPPPPPPPPPP...... SSSSSS......
-//....TTTT........ OOO......OOOO..... OOO......OOOO......LLLL...............TTTT........ IIII......PPPPPPPPPP........SSSSSSSSS...
-//....TTTT........ OOO......OOOO..... OOO......OOOO......LLLL...............TTTT........ IIII......PPPPPPPPP...........SSSSSSS...
-//....TTTT........ OOOO....OOOOO..... OOOO....OOOOO......LLLL...............TTTT........ IIII......PPPP...................SSSSS..
-//....TTTT.........OOOOO..OOOOO.......OOOOO..OOOOO.......LLLL...............TTTT........ IIII......PPPP............ SS....SSSS..
-//....TTTT.........OOOOOOOOOOOO.......OOOOOOOOOOOO.......LLLLLLLLLL.........TTTT........ IIII......PPPP............ SSSSSSSSSS..
-//....TTTT..........OOOOOOOOOO.........OOOOOOOOOO........LLLLLLLLLL.........TTTT........ IIII......PPPP............. SSSSSSSSS...
-//....TTTT............OOOOOO.............OOOOOO..........LLLLLLLLLL.........TTTT........ IIII......PPPP..............SSSSSSSS....
+    @Override
+    public void tick() {
+        super.tick();
+        selectedJobCraftableStacks.clear();
+        if (hasJobSelected()) {
+            if (getSelectedJob().is(Jobs.ALCHEMIST)) {
+                LinkedHashMap<MobEffect, Integer> potionMap = new LinkedHashMap<>();
+                potionMap.put(MobEffects.MOVEMENT_SPEED, 4);
+                potionMap.put(MobEffects.DIG_SPEED, 4);
+                potionMap.put(MobEffects.DAMAGE_BOOST, 4);
+                potionMap.put(MobEffects.REGENERATION, 3);
+                potionMap.put(MobEffects.LUCK, 4);
+                potionMap.put(ModEffects.JESUS.get(), 2);
+                potionMap.put(ModEffects.FLYING.get(), 2);
+                for (Map.Entry<MobEffect, Integer> entry : potionMap.entrySet()) {
+                    for (int i = 0; i < entry.getValue(); i++) {
+                        selectedJobCraftableStacks.add(PotionUtils.setCustomEffects(Items.POTION.getDefaultInstance(), Sets.newHashSet(new MobEffectInstance(entry.getKey()))));
+                    }
+                }
+            }
+        }
+
+        List<ConstructionCraftingRecipe> recipes = Minecraft.getInstance().level.getRecipeManager().getAllRecipesFor(ConstructionRecipeType.INSTANCE);
+        recipes.sort(Comparator.comparing(ConstructionCraftingRecipe::getRequiredLevel));
+        recipes.forEach(constructionRecipe -> {
+            if (constructionRecipe.getJob().is(getSelectedJob()))
+                selectedJobCraftableStacks.add(constructionRecipe.getResultItem());
+        });
+    }
+
+    private void renderBackgroundImage(PoseStack poseStack) {
+        blitThis(poseStack, 0, 0, 0, 0, this.imageWidth, this.imageHeight);
+    }
+
+    private void renderScrollWheel(PoseStack poseStack) {
+        blitThis(poseStack, 127, 17 + ((int) (41.0F * this.scrollOffs)), 0, 207, 12, 15);
+    }
 
     protected void renderTooltip(@NotNull PoseStack poseStack, int mouseX, int mouseY) {
-        mouseX = mouseX - startX;
-        mouseY = mouseY - startY;
+        mouseX -= startX;
+        mouseY -= startY;
         if (isBetween(mouseX, mouseY, 6, -22, 32, 0)) {
-            super.renderTooltip(poseStack, Component.translatable("jobsplus.gui.all_jobs"), mouseX + startX, mouseY + startY);
+            super.renderTooltip(poseStack, JobsPlus.translatable("gui.all_jobs"), mouseX + startX, mouseY + startY);
         } else if (isBetween(mouseX, mouseY, 6 + 28, -22, 32 + 28, 0)) {
-            super.renderTooltip(poseStack, Component.translatable("jobsplus.gui.performing_jobs"), mouseX + startX, mouseY + startY);
+            super.renderTooltip(poseStack, JobsPlus.translatable("gui.performing_jobs"), mouseX + startX, mouseY + startY);
         } else if (isBetween(mouseX, mouseY, 6 + 28 + 28, -22, 32 + 28 + 28, 0)) {
-            super.renderTooltip(poseStack, Component.translatable("jobsplus.gui.not_performing_jobs"), mouseX + startX, mouseY + startY);
+            super.renderTooltip(poseStack, JobsPlus.translatable("gui.not_performing_jobs"), mouseX + startX, mouseY + startY);
         } else if (isBetween(mouseX, mouseY, 6 + 150, -22, 32 + 150, 0)) {
-            super.renderTooltip(poseStack, Component.translatable("jobsplus.gui.job_info"), mouseX + startX, mouseY + startY);
+            super.renderTooltip(poseStack, JobsPlus.translatable("gui.job_info"), mouseX + startX, mouseY + startY);
         } else if (isBetween(mouseX, mouseY, 6 + 28 + 150, -22, 32 + 28 + 150, 0)) {
-            super.renderTooltip(poseStack, Component.translatable("jobsplus.gui.job_crafting_recipes"), mouseX + startX, mouseY + startY);
+            super.renderTooltip(poseStack, JobsPlus.translatable("gui.job_crafting_recipes"), mouseX + startX, mouseY + startY);
         } else if (isBetween(mouseX, mouseY, 6 + 28 + 28 + 150, -22, 32 + 28 + 28 + 150, 0)) {
-            super.renderTooltip(poseStack, Component.translatable("jobsplus.gui.job_powerups"), mouseX + startX, mouseY + startY);
+            super.renderTooltip(poseStack, JobsPlus.translatable("gui.job_powerups"), mouseX + startX, mouseY + startY);
         } else if (isBetween(mouseX, mouseY, 6 + 28 + 28 + 28 + 150, -22, 32 + 28 + 28 + 28 + 150, 0)) {
-            super.renderTooltip(poseStack, Component.translatable("jobsplus.gui.job_how_to_get_exp"), mouseX + startX, mouseY + startY);
+            super.renderTooltip(poseStack, JobsPlus.translatable("gui.job_how_to_get_exp"), mouseX + startX, mouseY + startY);
         } else if (isBetween(mouseX, mouseY, imageWidth, 6, imageWidth + 21, 31)) {
-            if (jobId >= 0 && array[64] == 1) {
+            if (hasJobSelected() && isJobDisplayEnabled()) {
                 if (getSelectedJobLevel() != 0) {
                     List<Component> list;
-                    final int displayId = array[62];
+                    final int displayId = getDisplay();
 
                     if (displayId != 0 && Jobs.getJobFromInt(displayId - 1) != null) {
-                        list = List.of(Component.translatable("jobsplus.gui.toggle_prefix"),
-                                Component.translatable("jobsplus.gui.active", ChatHandler.ColorizedJobName(Objects.requireNonNull(Jobs.getJobFromInt(displayId - 1))).replace(" ", "")));
+                        list = List.of(JobsPlus.translatable("gui.toggle_prefix"),
+                                JobsPlus.translatable("gui.active", ChatHandler.ColorizedJobName(Objects.requireNonNull(Jobs.getJobFromInt(displayId - 1))).replace(" ", "")));
                     } else {
-                        list = List.of(Component.translatable("jobsplus.gui.toggle_prefix"),
-                                Component.translatable("jobsplus.gui.active", ChatColor.boldBlue() + Component.translatable("job.none").getString()));
+                        list = List.of(JobsPlus.translatable("gui.toggle_prefix"),
+                                JobsPlus.translatable("gui.active", ChatColor.boldBlue() + Component.translatable("job.none").getString()));
                     }
                     super.renderTooltip(poseStack, list, Optional.empty(), mouseX + startX, mouseY + startY + 17);
                 }
             }
         } else if (isBetween(mouseX, mouseY, imageWidth, 35, imageWidth + 21, 60)) {
-            if (jobId >= 0) {
+            if (hasJobSelected()) {
                 if (getSelectedJobLevel() != 0) {
                     List<Component> list;
-                    final int bossBarId = array[63];
+                    final int bossBarId = getActiveBossBar();
 
                     if (bossBarId != -1 && Jobs.getJobFromInt(bossBarId) != null) {
-                        list = List.of(Component.translatable("jobsplus.gui.toggle_boss_bar"),
-                                Component.translatable("jobsplus.gui.active", ChatHandler.ColorizedJobName(Objects.requireNonNull(Jobs.getJobFromInt(bossBarId))).replace(" ", "")));
+                        list = List.of(JobsPlus.translatable("gui.toggle_boss_bar"),
+                                JobsPlus.translatable("gui.active", ChatHandler.ColorizedJobName(Objects.requireNonNull(Jobs.getJobFromInt(bossBarId))).replace(" ", "")));
                     } else {
-                        list = List.of(Component.translatable("jobsplus.gui.toggle_boss_bar"),
-                                Component.translatable("jobsplus.gui.active", ChatColor.boldBlue() + Component.translatable("job.none").getString()));
+                        list = List.of(JobsPlus.translatable("gui.toggle_boss_bar"),
+                                JobsPlus.translatable("gui.active", ChatColor.boldBlue() + Component.translatable("job.none").getString()));
                     }
                     super.renderTooltip(poseStack, list, Optional.empty(), mouseX + startX, mouseY + startY + 17);
                 }
@@ -201,25 +201,41 @@ public class JobsScreen extends Screen {
         if (activeRightButton == 1) {
             if (getItemStack(mouseX, mouseY) != ItemStack.EMPTY) {
                 super.renderTooltip(poseStack, getItemStack(mouseX, mouseY).copy(), mouseX + startX, mouseY + startY);
+                getItemStack1(mouseX, mouseY);
             }
         }
     }
 
-//.BBBBBBBBBB........UUUU...UUUU.......TTTTTTTTTTT.....TTTTTTTTTTT.......OOOOOOO..........NNNN...NNNN........SSSSSSS.....
-//.BBBBBBBBBBB.......UUUU...UUUU.......TTTTTTTTTTT.....TTTTTTTTTTT......OOOOOOOOOO........NNNNN..NNNN.......SSSSSSSSS....
-//.BBBBBBBBBBB.......UUUU...UUUU.......TTTTTTTTTTT.....TTTTTTTTTTT.....OOOOOOOOOOOO.......NNNNN..NNNN.......SSSSSSSSSS...
-//.BBBB...BBBB.......UUUU...UUUU..........TTTT............TTTT.........OOOOO..OOOOO.......NNNNNN.NNNN...... SSSS..SSSS...
-//.BBBB...BBBB.......UUUU...UUUU..........TTTT............TTTT........OOOOO....OOOOO......NNNNNN.NNNN...... SSSS.........
-//.BBBBBBBBBBB.......UUUU...UUUU..........TTTT............TTTT........OOOO......OOOO......NNNNNNNNNNN.......SSSSSSS......
-//.BBBBBBBBBB........UUUU...UUUU..........TTTT............TTTT........OOOO......OOOO......NNNNNNNNNNN........SSSSSSSSS...
-//.BBBBBBBBBBB.......UUUU...UUUU..........TTTT............TTTT........OOOO......OOOO......NNNNNNNNNNN..........SSSSSSS...
-//.BBBB....BBBB......UUUU...UUUU..........TTTT............TTTT........OOOOO....OOOOO......NNNNNNNNNNN.............SSSSS..
-//.BBBB....BBBB......UUUU...UUUU..........TTTT............TTTT.........OOOOO..OOOOO.......NNNN.NNNNNN...... SSS....SSSS..
-//.BBBBBBBBBBBB......UUUUUUUUUUU..........TTTT............TTTT.........OOOOOOOOOOOO.......NNNN..NNNNN...... SSSSSSSSSSS..
-//.BBBBBBBBBBB........UUUUUUUUU...........TTTT............TTTT..........OOOOOOOOOO........NNNN..NNNNN.......SSSSSSSSSS...
-//.BBBBBBBBBB..........UUUUUUU............TTTT............TTTT............OOOOOO..........NNNN...NNNN........SSSSSSSS....
+    private void drawJobButton(PoseStack poseStack, int mouseX, int mouseY, int yOffset, int something, int index) {
+        int j = index - this.startIndex;
+        int i1 = something + j * 35;
+        int j1 = this.imageHeight;
+        if (mouseX >= yOffset && mouseY >= i1 && mouseX < yOffset + 116 && mouseY < i1 + 35) {
+            if (index != this.selectedButton) j1 += 35;
+        }
+        if (index == this.selectedButton) blitThis(poseStack, 7, i1 - startY, 26, j1 + 35 * 2, 116, 35);
+        else blitThis(poseStack, 7, i1 - startY, 26, j1, 116, 35);
+    }
 
-    public void renderButtons(PoseStack poseStack, int mouseX, int mouseY, int p_99345_, int something, int occurrences) {
+    private void drawTopButtons(PoseStack poseStack, int mouseX, int mouseY, int buttonAmount, int posXOffset, int startYOffset, int activeButton) {
+        for (int i = 0; i < buttonAmount; ++i) {
+            int posX = posXOffset + (28 * i);
+            if (activeButton != i && isBetween(mouseX - startX, mouseY - startY, posX, -19, posX + 25, 0)) {
+                RenderSystem.setShaderColor(0.7F, 0.7F, 1F, 1);
+                drawNotSelectedTopButton(poseStack, activeButton, i, posX);
+                RenderColor.normal();
+            } else {
+                drawNotSelectedTopButton(poseStack, activeButton, i, posX);
+            }
+            blitThis(poseStack, posX + 3, -21, 0, imageHeight + 56 + startYOffset + (20 * i), 20, 20);
+        }
+    }
+
+    private void drawNotSelectedTopButton(PoseStack poseStack, int activeButton, int i, int posX) {
+        blitThis(poseStack, posX, -22, 142, activeButton == i ? imageHeight + 22 : imageHeight, 26, 22);
+    }
+
+    public void renderButtons(PoseStack poseStack, int mouseX, int mouseY, int yOffset, int something, int occurrences) {
         //SETTINGS
         if (isBetween(mouseX, mouseY, 3, height - 20, 18, height - 4))
             RenderSystem.setShaderColor(0.8F, 0.8F, 0.8F, 1);
@@ -238,76 +254,38 @@ public class JobsScreen extends Screen {
         // JOB BUTTONS
         if (activeLeftButton == 0) {
             for (int i = this.startIndex; i < occurrences && i < Jobs.values().length; ++i) {
-                int j = i - this.startIndex;
-                int i1 = something + j * 35;
-                int j1 = this.imageHeight;
-                if (mouseX >= p_99345_ && mouseY >= i1 && mouseX < p_99345_ + 116 && mouseY < i1 + 35) {
-                    if (i != this.selectedButton) j1 += 35;
-                }
-                if (i == this.selectedButton) blitThis(poseStack, 7, i1 - startY, 26, j1 + 35 * 2, 116, 35);
-                else blitThis(poseStack, 7, i1 - startY, 26, j1, 116, 35);
+                drawJobButton(poseStack, mouseX, mouseY, yOffset, something, i);
             }
         }
         //JOB BUTTONS
         if (activeLeftButton == 1 || activeLeftButton == 2) {
             Map<Jobs, int[]> map = new HashMap<>();
-            for (int i = 0; i < Jobs.values().length; ++i) {
-                int level = array[i * 2];
-                int exp = array[i * 2 + 1];
+            for (Jobs job : Jobs.values()) {
+                int level = getJobLevel(job);
+                int exp = getJobEXP(job);
                 if (activeLeftButton == 1) {
                     if (level != 0) {
-                        map.put(Jobs.valueOf(Jobs.getEnglishString(i)), new int[]{level, exp});
+                        map.put(job, new int[]{level, exp});
                     }
                 }
                 if (activeLeftButton == 2) {
                     if (level == 0) {
-                        map.put(Jobs.valueOf(Jobs.getEnglishString(i)), new int[]{level, exp});
+                        map.put(job, new int[]{level, exp});
                     }
                 }
             }
             for (int i = this.startIndex; i < occurrences && i < map.size(); ++i) {
-                int j = i - this.startIndex;
-                int i1 = something + j * 35;
-                int j1 = this.imageHeight;
-                if (mouseX >= p_99345_ && mouseY >= i1 && mouseX < p_99345_ + 116 && mouseY < i1 + 35) {
-                    if (i != this.selectedButton) j1 += 35;
-                }
-                if (i == this.selectedButton) blitThis(poseStack, 7, i1 - startY, 26, j1 + 35 * 2, 116, 35);
-                else blitThis(poseStack, 7, i1 - startY, 26, j1, 116, 35);
+                drawJobButton(poseStack, mouseX, mouseY, yOffset, something, i);
             }
         }
         // LEFT BUTTONS
-        for (int i = 0; i < 3; ++i) {
-            int posX = 6 + (28 * i);
-            if (activeLeftButton != i && isBetween(mouseX - startX, mouseY - startY, posX, -19, posX + 25, 0)) {
-                poseStack.pushPose();
-                RenderSystem.setShaderColor(0.7F, 0.7F, 1F, 1);
-                blitThis(poseStack, posX, -22, 142, activeLeftButton == i ? imageHeight + 22 : imageHeight, 26, 22);
-                RenderColor.normal();
-                poseStack.popPose();
-            } else {
-                blitThis(poseStack, posX, -22, 142, activeLeftButton == i ? imageHeight + 22 : imageHeight, 26, 22);
-            }
-            blitThis(poseStack, posX + 3, -21, 0, imageHeight + 56 + (20 * i), 20, 20);
-        }
+        drawTopButtons(poseStack, mouseX, mouseY, 3, 6, 0, activeLeftButton);
         //RIGHT BUTTONS
-        for (int i = 0; i < 4; ++i) {
-            int posX = 156 + (28 * i);
-            if (activeRightButton != i && isBetween(mouseX - startX, mouseY - startY, posX, -19, posX + 25, 0)) {
-                poseStack.pushPose();
-                RenderSystem.setShaderColor(0.7F, 0.7F, 1F, 1);
-                blitThis(poseStack, posX, -22, 142, activeRightButton == i ? imageHeight + 22 : imageHeight, 26, 22);
-                RenderColor.normal();
-                poseStack.popPose();
-            } else {
-                blitThis(poseStack, posX, -22, 142, activeRightButton == i ? imageHeight + 22 : imageHeight, 26, 22);
-            }
-            blitThis(poseStack, posX + 3, -21, 0, imageHeight + 56 + 60 + (20 * i), 20, 20);
-        }
+        drawTopButtons(poseStack, mouseX, mouseY, 4, 156, 60, activeRightButton);
         //JOB BUTTONS
         if (activeLeftButton == 0) {
             for (int i = this.startIndex; i < occurrences && i < Jobs.values().length; ++i) {
-                int level = array[i * 2];
+                int level = getJobLevel(Jobs.getJobFromInt(i));
                 int j = i - this.startIndex;
                 int i1 = something - startY + j * 35 - 1;
 
@@ -322,22 +300,18 @@ public class JobsScreen extends Screen {
         //JOB BUTTONS
         if (activeLeftButton == 1 || activeLeftButton == 2) {
             ints = new ArrayList<>();
-            for (int i = 0; i < Jobs.values().length; ++i) {
-                int level = array[i * 2];
-                int exp = array[i * 2 + 1];
-                if (activeLeftButton == 1) {
-                    if (level != 0) {
-                        ints.add(level);
-                        ints.add(exp);
-                        ints.add(Jobs.getJobInt(Jobs.valueOf(Jobs.getEnglishString(i))));
-                    }
+            for (Jobs job : Jobs.values()) {
+                int level = getJobLevel(job);
+                int exp = getJobEXP(job);
+                if (activeLeftButton == 1 && level != 0) {
+                    ints.add(level);
+                    ints.add(exp);
+                    ints.add(Jobs.getJobInt(job));
                 }
-                if (activeLeftButton == 2) {
-                    if (level == 0) {
-                        ints.add(level);
-                        ints.add(exp);
-                        ints.add(Jobs.getJobInt(Jobs.valueOf(Jobs.getEnglishString(i))));
-                    }
+                if (activeLeftButton == 2 && level == 0) {
+                    ints.add(level);
+                    ints.add(exp);
+                    ints.add(Jobs.getJobInt(job));
                 }
             }
             for (int i = this.startIndex; i < occurrences; ++i) {
@@ -359,7 +333,7 @@ public class JobsScreen extends Screen {
         }
         // JOB START AND STOP BUTTONS
         if (activeRightButton == 0) {
-            if (getSelectedJobLevel() == 0 || jobId != -1) {
+            if (hasJobSelected()) {
                 if (isBetween(mouseX - startX, mouseY - startY, 169, 132, 169 + 138, 132 + 17)) {
                     RenderSystem.setShaderColor(0.7F, 0.7F, 1F, 1);
                 } else {
@@ -371,14 +345,14 @@ public class JobsScreen extends Screen {
             }
             // CRAFTING RECIPE BUTTONS
         } else if (activeRightButton == 1) {
-            if (jobId != -1) {
-                for (int i = 0; i < Arrays.asList(23, 5, 4, 3, 4, 4, 9, 4, 4, 16).get(jobId); ++i) {
+            if (hasJobSelected()) {
+                for (int i = 0; i < List.of(23, 5, 4, 3, 4, 4, 9, 4, 4, 16).get(jobId); ++i) {
                     int xOffset = 172 + i % 5 * 27;
-                    int yOffset = 18 + (i / 5) * 27;
-                    if (isBetween(mouseX - startX, mouseY - startY, xOffset, yOffset, xOffset + 23, yOffset + 23)) {
+                    int yOffset1 = 18 + (i / 5) * 27;
+                    if (isBetween(mouseX - startX, mouseY - startY, xOffset, yOffset1, xOffset + 23, yOffset1 + 23)) {
                         RenderSystem.setShaderColor(0.7F, 0.7F, 1F, 1);
                     }
-                    blitThis(poseStack, xOffset, yOffset, 142, 210, 24, 24);
+                    blitThis(poseStack, xOffset, yOffset1, 142, 210, 24, 24);
                     RenderColor.normal();
                 }
                 //CONSTRUCTION TABLE
@@ -389,14 +363,14 @@ public class JobsScreen extends Screen {
                 }
             }
         } else if (activeRightButton == 2) {
-            if (jobId != -1) {
+            if (hasJobSelected()) {
                 //POWER-UP 1
-                if (array[21 + (jobId * 3) + 1] == 1) {
+                if (hasPowerupActive(1)) {
                     RenderSystem.setShaderColor(0.5F, 1F, 0.5F, 1);
                     if (isBetween(mouseX - startX, mouseY - startY, 169, 27, 169 + 138, 27 + 17)) {
                         RenderSystem.setShaderColor(0.3F, 0.9F, 0.3F, 1);
                     }
-                } else if (array[21 + (jobId * 3) + 1] == 2) {
+                } else if (hasPowerupDisabled(1)) {
                     RenderSystem.setShaderColor(1F, 0.5F, 0.5F, 1);
                     if (isBetween(mouseX - startX, mouseY - startY, 169, 27, 169 + 138, 27 + 17)) {
                         RenderSystem.setShaderColor(0.9F, 0.3F, 0.3F, 1);
@@ -409,12 +383,12 @@ public class JobsScreen extends Screen {
                 blitThis(poseStack, 150 + 19, 27, 26, imageHeight + 105, 139, 18);
                 RenderColor.normal();
                 //POWER-UP 2
-                if (array[21 + (jobId * 3) + 2] == 1) {
+                if (hasPowerupActive(2)) {
                     RenderSystem.setShaderColor(0.5F, 1F, 0.5F, 1);
                     if (isBetween(mouseX - startX, mouseY - startY, 169, 27 + 25, 169 + 138, 27 + 17 + 25)) {
                         RenderSystem.setShaderColor(0.3F, 0.9F, 0.3F, 1);
                     }
-                } else if (array[21 + (jobId * 3) + 2] == 2) {
+                } else if (hasPowerupDisabled(2)) {
                     RenderSystem.setShaderColor(1F, 0.5F, 0.5F, 1);
                     if (isBetween(mouseX - startX, mouseY - startY, 169, 27 + 25, 169 + 138, 27 + 17 + 25)) {
                         RenderSystem.setShaderColor(0.9F, 0.3F, 0.3F, 1);
@@ -427,12 +401,12 @@ public class JobsScreen extends Screen {
                 blitThis(poseStack, 150 + 19, 52, 26, imageHeight + 105, 139, 18);
                 RenderColor.normal();
                 //POWER-UP 3
-                if (array[21 + (jobId * 3) + 3] == 1) {
+                if (hasPowerupActive(3)) {
                     RenderSystem.setShaderColor(0.5F, 1F, 0.5F, 1);
                     if (isBetween(mouseX - startX, mouseY - startY, 169, 27 + 50, 169 + 138, 27 + 17 + 50)) {
                         RenderSystem.setShaderColor(0.3F, 0.9F, 0.3F, 1);
                     }
-                } else if (array[21 + (jobId * 3) + 3] == 2) {
+                } else if (hasPowerupDisabled(3)) {
                     RenderSystem.setShaderColor(1F, 0.5F, 0.5F, 1);
                     if (isBetween(mouseX - startX, mouseY - startY, 169, 27 + 50, 169 + 138, 27 + 17 + 50)) {
                         RenderSystem.setShaderColor(0.9F, 0.3F, 0.3F, 1);
@@ -445,8 +419,8 @@ public class JobsScreen extends Screen {
                 blitThis(poseStack, 150 + 19, 77, 26, imageHeight + 105, 139, 18);
                 RenderColor.normal();
                 //SUPERPOWER
-                if (array[(jobId * 2)] == 100) {
-                    if (array[52 + jobId] == 0) {
+                if (getSelectedJobLevel() == 100) {
+                    if (hasSelectedJobSuperpowerEnabled()) {
                         RenderSystem.setShaderColor(0.5F, 1F, 0.5F, 1);
                         if (isBetween(mouseX - startX, mouseY - startY, 169, 27 + 103, 169 + 138, 27 + 17 + 103)) {
                             RenderSystem.setShaderColor(0.3F, 0.9F, 0.3F, 1);
@@ -466,78 +440,67 @@ public class JobsScreen extends Screen {
                 RenderColor.normal();
             }
         }
-        if (jobId != -1) {
+        if (hasJobSelected()) {
             if (getSelectedJobLevel() != 0) {
                 //Job Display Background
-                if (array[64] == 1) {
-                    if (array[62] == jobId + 1) blitThis(poseStack, imageWidth, 6, 142, 234, 22, 26);
+                if (isJobDisplayEnabled()) {
+                    if (getDisplay() == jobId + 1) blitThis(poseStack, imageWidth, 6, 142, 234, 22, 26);
                     else blitThis(poseStack, imageWidth, 6, 164, 234, 19, 26);
                 }
                 //Boss Bar Background
-                if (array[63] == jobId) blitThis(poseStack, imageWidth, 9 + 26, 142, 234, 22, 26);
+                if (getActiveBossBar() == jobId) blitThis(poseStack, imageWidth, 9 + 26, 142, 234, 22, 26);
                 else blitThis(poseStack, imageWidth, 9 + 26, 164, 234, 19, 26);
                 // Boss Bar Icon
-                if (array[63] == jobId) blitThis(poseStack, imageWidth + 2, 9 + 32, 164 + 19, 234, 15, 14);
+                if (getActiveBossBar() == jobId) blitThis(poseStack, imageWidth + 2, 9 + 32, 164 + 19, 234, 15, 14);
                 else blitThis(poseStack, imageWidth + 1, 9 + 32, 164 + 19, 234, 15, 14);
             }
         }
     }
 
-//.TTTTTTTTTTT...EEEEEEEEEEEE...EXXX..XXXXX...XTTTTTTTTT.....SSSSSSS.....
-//.TTTTTTTTTTT...EEEEEEEEEEE....EXXX..XXXX....XTTTTTTTTT....TSSSSSSSS....
-//.TTTTTTTTTTT...EEEEEEEEEEE....EXXXXXXXXX....XTTTTTTTTT...TTSSSSSSSSS...
-//....TTTT.......EEEE............XXXXXXXX........TTTT......TTSSS..SSSS...
-//....TTTT.......EEEE.............XXXXXX.........TTTT......TTSSS.........
-//....TTTT.......EEEEEEEEEE.......XXXXXX.........TTTT.......TSSSSSS......
-//....TTTT.......EEEEEEEEEE.......XXXXX..........TTTT........SSSSSSSSS...
-//....TTTT.......EEEEEEEEEE.......XXXXXX.........TTTT..........SSSSSSS...
-//....TTTT.......EEEE............XXXXXXXX........TTTT.............SSSSS..
-//....TTTT.......EEEE............XXXXXXXX........TTTT......TTSS....SSSS..
-//....TTTT.......EEEEEEEEEEE....EXXX.XXXXX.......TTTT......TTSSSSSSSSSS..
-//....TTTT.......EEEEEEEEEEEE...EXXX..XXXXX......TTTT.......TSSSSSSSSS...
-//....TTTT.......EEEEEEEEEEEE...EXX....XXXX......TTTT........SSSSSSSS....
+    public void renderTexts(PoseStack poseStack, int something, int occurrences) {
+        font.draw(poseStack, ChatColor.darkGray() + JobsPlus.translatable("gui.jobs").getString(), startX + 7, startY + 6, 16777215);
+        drawRightAlignedString(poseStack, font, ChatColor.darkGray() + JobsPlus.translatable("gui.coins.top", getCoins()).getString(), startX + 140, startY + 6, 16777215);
 
-    public void drawTexts(PoseStack poseStack, int something, int occurrences) {
         if (activeLeftButton == 0) {
             for (int i = this.startIndex; i < occurrences && i < Jobs.values().length; ++i) {
                 int j = i - this.startIndex;
                 int i1 = something + j * 35;
-                int level = array[i * 2];
-                int exp = array[i * 2 + 1];
+                int level = getJobLevel(Jobs.getJobFromInt(i));
+                int exp = getJobEXP(Jobs.getJobFromInt(i));
                 if (level != 0) {
                     int maxExp = LevelHandler.calcExp(level);
                     font.draw(poseStack, ChatColor.boldGreen() + Jobs.getString(i), startX + 7 + 3 + 35, i1 + 3, 16777215);
-                    font.draw(poseStack, ChatColor.aqua() + Component.translatable("jobsplus.gui.level", ChatColor.reset(), level).getString(), startX + 7 + 3 + 35, i1 + 14, 16777215);
+                    font.draw(poseStack, ChatColor.aqua() + JobsPlus.translatable("gui.level", ChatColor.reset(), level).getString(), startX + 7 + 3 + 35, i1 + 14, 16777215);
                     if (level != 100)
-                        font.draw(poseStack, ChatColor.aqua() + Component.translatable("jobsplus.gui.exp", ChatColor.reset(), (int) ((double) exp / maxExp * 100), "%").getString(), startX + 7 + 3 + 35, i1 + 23, 16777215);
+                        font.draw(poseStack, ChatColor.aqua() + JobsPlus.translatable("gui.exp", ChatColor.reset(), (int) ((double) exp / maxExp * 100), "%").getString(), startX + 7 + 3 + 35, i1 + 23, 16777215);
                 } else {
                     font.draw(poseStack, ChatColor.boldRed() + Jobs.getString(i), startX + 7 + 3 + 35, i1 + 3, 16777215);
-                    font.draw(poseStack, ChatColor.aqua() + Component.translatable("jobsplus.gui.want_this_job").getString(), startX + 7 + 3 + 35, i1 + 14, 16777215);
-                    if (array[21] < 2) {
-                        font.draw(poseStack, ChatColor.aqua() + Component.translatable("jobsplus.gui.cost", ChatColor.reset(), 0).getString(), startX + 7 + 3 + 35, i1 + 23, 16777215);
+                    font.draw(poseStack, ChatColor.aqua() + JobsPlus.translatable("gui.want_this_job").getString(), startX + 7 + 3 + 35, i1 + 14, 16777215);
+                    if (hasFreeClaimableJobs()) {
+                        font.draw(poseStack, ChatColor.aqua() + JobsPlus.translatable("gui.cost", ChatColor.reset(), 0).getString(), startX + 7 + 3 + 35, i1 + 23, 16777215);
                     } else {
-                        font.draw(poseStack, ChatColor.aqua() + Component.translatable("jobsplus.gui.cost", ChatColor.reset(), 10).getString(), startX + 7 + 3 + 35, i1 + 23, 16777215);
+                        font.draw(poseStack, ChatColor.aqua() + JobsPlus.translatable("gui.cost", ChatColor.reset(), 10).getString(), startX + 7 + 3 + 35, i1 + 23, 16777215);
                     }
                 }
             }
         }
         if (activeLeftButton == 1 || activeLeftButton == 2) {
             ints = new ArrayList<>();
-            for (int i = 0; i < Jobs.values().length; ++i) {
-                int level = array[i * 2];
-                int exp = array[i * 2 + 1];
+            for (Jobs job : Jobs.values()) {
+                int level = getJobLevel(job);
+                int exp = getJobEXP(job);
                 if (activeLeftButton == 1) {
                     if (level != 0) {
                         ints.add(level);
                         ints.add(exp);
-                        ints.add(Jobs.getJobInt(Jobs.valueOf(Jobs.getEnglishString(i))));
+                        ints.add(Jobs.getJobInt(job));
                     }
                 }
                 if (activeLeftButton == 2) {
                     if (level == 0) {
                         ints.add(level);
                         ints.add(exp);
-                        ints.add(Jobs.getJobInt(Jobs.valueOf(Jobs.getEnglishString(i))));
+                        ints.add(Jobs.getJobInt(job));
                     }
                 }
             }
@@ -551,21 +514,21 @@ public class JobsScreen extends Screen {
                     if (level != 0) {
                         int maxExp = LevelHandler.calcExp(level);
                         font.draw(poseStack, ChatColor.boldGreen() + Jobs.getString(currentJobArray[2]), startX + 7 + 3 + 35, i1 + 3, 16777215);
-                        font.draw(poseStack, ChatColor.aqua() + Component.translatable("jobsplus.gui.level", ChatColor.reset(), level).getString(), startX + 7 + 3 + 35, i1 + 14, 16777215);
-                        font.draw(poseStack, ChatColor.aqua() + Component.translatable("jobsplus.gui.exp", ChatColor.reset(), (int) ((double) exp / maxExp * 100), "%").getString(), startX + 7 + 3 + 35, i1 + 23, 16777215);
+                        font.draw(poseStack, ChatColor.aqua() + JobsPlus.translatable("gui.level", ChatColor.reset(), level).getString(), startX + 7 + 3 + 35, i1 + 14, 16777215);
+                        font.draw(poseStack, ChatColor.aqua() + JobsPlus.translatable("gui.exp", ChatColor.reset(), (int) ((double) exp / maxExp * 100), "%").getString(), startX + 7 + 3 + 35, i1 + 23, 16777215);
                     } else {
                         font.draw(poseStack, ChatColor.boldRed() + Jobs.getString(currentJobArray[2]), startX + 7 + 3 + 35, i1 + 3, 16777215);
-                        font.draw(poseStack, ChatColor.aqua() + Component.translatable("jobsplus.gui.want_this_job").getString(), startX + 7 + 3 + 35, i1 + 14, 16777215);
-                        if (array[21] < 2) {
-                            font.draw(poseStack, ChatColor.aqua() + Component.translatable("jobsplus.gui.cost", ChatColor.reset(), 0).getString(), startX + 7 + 3 + 35, i1 + 23, 16777215);
+                        font.draw(poseStack, ChatColor.aqua() + JobsPlus.translatable("gui.want_this_job").getString(), startX + 7 + 3 + 35, i1 + 14, 16777215);
+                        if (hasFreeClaimableJobs()) {
+                            font.draw(poseStack, ChatColor.aqua() + JobsPlus.translatable("gui.cost", ChatColor.reset(), 0).getString(), startX + 7 + 3 + 35, i1 + 23, 16777215);
                         } else {
-                            font.draw(poseStack, ChatColor.aqua() + Component.translatable("jobsplus.gui.cost", ChatColor.reset(), 10).getString(), startX + 7 + 3 + 35, i1 + 23, 16777215);
+                            font.draw(poseStack, ChatColor.aqua() + JobsPlus.translatable("gui.cost", ChatColor.reset(), 10).getString(), startX + 7 + 3 + 35, i1 + 23, 16777215);
                         }
                     }
                 }
             }
         }
-        if (jobId == -1) {
+        if (!hasJobSelected()) {
             if (activeRightButton == 0) drawNoJobSelected(poseStack, "info");
             else if (activeRightButton == 1) drawNoJobSelected(poseStack, "crafting");
             else if (activeRightButton == 2) drawNoJobSelected(poseStack, "powerups");
@@ -576,27 +539,27 @@ public class JobsScreen extends Screen {
                 drawnBigJobTitle(poseStack);
                 drawJobInfo(poseStack);
                 if (getSelectedJobLevel() == 0) {
-                    drawCenteredStringNew(poseStack, font, ChatColor.white() + Component.translatable("jobsplus.gui.job.start").getString(), centerR, startY + 137, 16777215);
+                    drawCenteredStringNew(poseStack, font, ChatColor.white() + JobsPlus.translatable("gui.job.start").getString(), centerR, startY + 137, 16777215);
                 } else {
-                    drawCenteredStringNew(poseStack, font, ChatColor.white() + Component.translatable("jobsplus.gui.job.stop").getString(), centerR, startY + 137, 16777215);
+                    drawCenteredStringNew(poseStack, font, ChatColor.white() + JobsPlus.translatable("gui.job.stop").getString(), centerR, startY + 137, 16777215);
                 }
             } else if (activeRightButton == 1) {
-                drawCenteredStringNew(poseStack, font, ChatColor.darkGray() + Component.translatable("jobsplus.gui.crafting").getString(), centerR, startY + 6, 16777215);
+                drawCenteredStringNew(poseStack, font, ChatColor.darkGray() + JobsPlus.translatable("gui.crafting").getString(), centerR, startY + 6, 16777215);
                 if (jobId != 0) {
                     font.draw(poseStack, ChatColor.darkGray() + "Craft the items using", startX + 189, startY + 171, 16777215);
                     font.draw(poseStack, ChatColor.darkGray() + "the Construction Table.", startX + 189, startY + 181, 16777215);
                 }
             } else if (activeRightButton == 2) {
-                drawCenteredStringNew(poseStack, font, ChatColor.darkGray() + Component.translatable("jobsplus.gui.powerups.powerups").getString(), centerR, startY + 6, 16777215);
-                drawCenteredStringNew(poseStack, font, ChatColor.gray() + Component.translatable("jobsplus.gui.powerups.cost").getString(), centerR, startY + 16, 16777215);
-                drawCenteredStringNew(poseStack, font, ChatColor.darkGray() + Component.translatable("jobsplus.gui.powerups.superpowers").getString(), centerR, startY + 110, 16777215);
-                drawCenteredStringNew(poseStack, font, ChatColor.gray() + Component.translatable("jobsplus.gui.powerups.superpowers.cost").getString(), centerR, startY + 120, 16777215);
+                drawCenteredStringNew(poseStack, font, ChatColor.darkGray() + JobsPlus.translatable("gui.powerups.powerups").getString(), centerR, startY + 6, 16777215);
+                drawCenteredStringNew(poseStack, font, ChatColor.gray() + JobsPlus.translatable("gui.powerups.cost").getString(), centerR, startY + 16, 16777215);
+                drawCenteredStringNew(poseStack, font, ChatColor.darkGray() + JobsPlus.translatable("gui.powerups.superpowers").getString(), centerR, startY + 110, 16777215);
+                drawCenteredStringNew(poseStack, font, ChatColor.gray() + JobsPlus.translatable("gui.powerups.superpowers.cost").getString(), centerR, startY + 120, 16777215);
                 poseStack.pushPose();
                 poseStack.scale(0.72F, 0.72F, 0.72F);
-                drawCenteredPowerupsString(poseStack, font, ChatColor.darkGray() + Component.translatable("jobsplus.gui.powerups." + Jobs.getEnglishString(jobId).toLowerCase() + ".1").getString(), (int) ((startX + (imageWidth + 152) / 2) / 0.72F), (int) ((startY + 33) / 0.72F), 16777215);
-                drawCenteredPowerupsString(poseStack, font, ChatColor.darkGray() + Component.translatable("jobsplus.gui.powerups." + Jobs.getEnglishString(jobId).toLowerCase() + ".2").getString(), (int) ((startX + (imageWidth + 152) / 2) / 0.72F), (int) ((startY + 58) / 0.72F), 16777215);
-                drawCenteredPowerupsString(poseStack, font, ChatColor.darkGray() + Component.translatable("jobsplus.gui.powerups." + Jobs.getEnglishString(jobId).toLowerCase() + ".3").getString(), (int) ((startX + (imageWidth + 152) / 2) / 0.72F), (int) ((startY + 83) / 0.72F), 16777215);
-                drawCenteredPowerupsString(poseStack, font, ChatColor.darkGray() + Component.translatable("jobsplus.gui.powerups." + Jobs.getEnglishString(jobId).toLowerCase() + ".superpower").getString(), (int) ((startX + (imageWidth + 152) / 2) / 0.72F), (int) ((startY + 137) / 0.72F), 16777215);
+                drawCenteredPowerupsString(poseStack, font, ChatColor.darkGray() + JobsPlus.translatable("gui.powerups." + Jobs.getEnglishString(jobId).toLowerCase() + ".1").getString(), (int) ((startX + (imageWidth + 152) / 2) / 0.72F), (int) ((startY + 33) / 0.72F), 16777215);
+                drawCenteredPowerupsString(poseStack, font, ChatColor.darkGray() + JobsPlus.translatable("gui.powerups." + Jobs.getEnglishString(jobId).toLowerCase() + ".2").getString(), (int) ((startX + (imageWidth + 152) / 2) / 0.72F), (int) ((startY + 58) / 0.72F), 16777215);
+                drawCenteredPowerupsString(poseStack, font, ChatColor.darkGray() + JobsPlus.translatable("gui.powerups." + Jobs.getEnglishString(jobId).toLowerCase() + ".3").getString(), (int) ((startX + (imageWidth + 152) / 2) / 0.72F), (int) ((startY + 83) / 0.72F), 16777215);
+                drawCenteredPowerupsString(poseStack, font, ChatColor.darkGray() + JobsPlus.translatable("gui.powerups." + Jobs.getEnglishString(jobId).toLowerCase() + ".superpower").getString(), (int) ((startX + (imageWidth + 152) / 2) / 0.72F), (int) ((startY + 137) / 0.72F), 16777215);
                 poseStack.popPose();
             } else if (activeRightButton == 3) {
                 drawnBigJobTitle(poseStack);
@@ -606,7 +569,8 @@ public class JobsScreen extends Screen {
                 }
                 poseStack.pushPose();
                 poseStack.scale(1.2F, 1.2F, 1.2F);
-                drawCenteredStringNew(poseStack, font, ChatColor.darkGray() + Component.translatable("jobsplus.gui.exp.title").getString(), (int) ((centerR) / 1.2), (int) ((startY + 37) / 1.2), 16777215);
+                drawCenteredStringNew(poseStack, font, ChatColor.darkGray() + JobsPlus.translatable("gui.exp.title").getString(), (int) ((centerR) / 1.2), (int) ((startY + 37) / 1.2), 16777215);
+                poseStack.popPose();
             }
         }
     }
@@ -614,53 +578,17 @@ public class JobsScreen extends Screen {
     public void renderItems(int x, int y) {
         if (minecraft == null) return;
         ItemRenderer itemRenderer = minecraft.getItemRenderer();
-        if (activeRightButton == 1) {
-            ArrayList<ItemStack> jobItemsArray = new ArrayList<>();
-            if (jobId == 0) {
-                final ItemStack SPEED_POTION = Items.POTION.getDefaultInstance();
-                final ItemStack HASTE_POTION = Items.POTION.getDefaultInstance();
-                final ItemStack STRENGTH_POTION = Items.POTION.getDefaultInstance();
-                final ItemStack REGENERATION_POTION = Items.POTION.getDefaultInstance();
-                final ItemStack LUCK_POTION = Items.POTION.getDefaultInstance();
-                final ItemStack JESUS_POTION = Items.POTION.getDefaultInstance();
-                final ItemStack FLYING_POTION = Items.POTION.getDefaultInstance();
-                Set<MobEffectInstance> speed = Sets.newHashSet(new MobEffectInstance(MobEffects.MOVEMENT_SPEED));
-                Set<MobEffectInstance> haste = Sets.newHashSet(new MobEffectInstance(MobEffects.DIG_SPEED));
-                Set<MobEffectInstance> strength = Sets.newHashSet(new MobEffectInstance(MobEffects.DAMAGE_BOOST));
-                Set<MobEffectInstance> regeneration = Sets.newHashSet(new MobEffectInstance(MobEffects.REGENERATION));
-                Set<MobEffectInstance> luck = Sets.newHashSet(new MobEffectInstance(MobEffects.LUCK));
-                Set<MobEffectInstance> jesus = Sets.newHashSet(new MobEffectInstance(ModEffects.JESUS.get()));
-                Set<MobEffectInstance> flying = Sets.newHashSet(new MobEffectInstance(ModEffects.FLYING.get()));
-                jobItemsArray.addAll(Arrays.asList(PotionUtils.setCustomEffects(SPEED_POTION, speed), PotionUtils.setCustomEffects(SPEED_POTION, speed), PotionUtils.setCustomEffects(SPEED_POTION, speed), PotionUtils.setCustomEffects(SPEED_POTION, speed), PotionUtils.setCustomEffects(HASTE_POTION, haste), PotionUtils.setCustomEffects(HASTE_POTION, haste), PotionUtils.setCustomEffects(HASTE_POTION, haste), PotionUtils.setCustomEffects(HASTE_POTION, haste), PotionUtils.setCustomEffects(STRENGTH_POTION, strength), PotionUtils.setCustomEffects(STRENGTH_POTION, strength), PotionUtils.setCustomEffects(STRENGTH_POTION, strength), PotionUtils.setCustomEffects(STRENGTH_POTION, strength), PotionUtils.setCustomEffects(REGENERATION_POTION, regeneration), PotionUtils.setCustomEffects(REGENERATION_POTION, regeneration), PotionUtils.setCustomEffects(REGENERATION_POTION, regeneration), PotionUtils.setCustomEffects(LUCK_POTION, luck), PotionUtils.setCustomEffects(LUCK_POTION, luck), PotionUtils.setCustomEffects(LUCK_POTION, luck), PotionUtils.setCustomEffects(LUCK_POTION, luck), PotionUtils.setCustomEffects(JESUS_POTION, jesus), PotionUtils.setCustomEffects(JESUS_POTION, jesus), PotionUtils.setCustomEffects(FLYING_POTION, flying), PotionUtils.setCustomEffects(FLYING_POTION, flying)));
-            } else if (jobId == 1) {
-                jobItemsArray.addAll(Arrays.asList(ModItems.SMALL_BACKPACK.get().getDefaultInstance(), ModItems.MEDIUM_BACKPACK.get().getDefaultInstance(), ModItems.LARGE_BACKPACK.get().getDefaultInstance(), ModItems.HUGE_BACKPACK.get().getDefaultInstance(), ModItems.ENDER_BACKPACK.get().getDefaultInstance()));
-            } else if (jobId == 2) {
-                jobItemsArray.addAll(Arrays.asList(ModItems.DIGGERS_EXCAVATOR_LEVEL_1.get().getDefaultInstance(), ModItems.DIGGERS_EXCAVATOR_LEVEL_2.get().getDefaultInstance(), ModItems.DIGGERS_EXCAVATOR_LEVEL_3.get().getDefaultInstance(), ModItems.DIGGERS_EXCAVATOR_LEVEL_4.get().getDefaultInstance()));
-            } else if (jobId == 3) {
-                jobItemsArray.addAll(Arrays.asList(ModItems.EXP_JAR.get().getDefaultInstance(), ModItems.EXPERIENCE_BOTTLE.get().getDefaultInstance(), ModItems.CURSE_BREAKER.get().getDefaultInstance()));
-            } else if (jobId == 4) {
-                jobItemsArray.addAll(Arrays.asList(ModItems.FARMERS_HOE_LEVEL_1.get().getDefaultInstance(), ModItems.FARMERS_HOE_LEVEL_2.get().getDefaultInstance(), ModItems.FARMERS_HOE_LEVEL_3.get().getDefaultInstance(), ModItems.FARMERS_HOE_LEVEL_4.get().getDefaultInstance()));
-            } else if (jobId == 5) {
-                jobItemsArray.addAll(Arrays.asList(ModItems.FISHERMANS_ROD_LEVEL_1.get().getDefaultInstance(), ModItems.FISHERMANS_ROD_LEVEL_2.get().getDefaultInstance(), ModItems.FISHERMANS_ROD_LEVEL_3.get().getDefaultInstance(), ModItems.FISHERMANS_ROD_LEVEL_4.get().getDefaultInstance()));
-            } else if (jobId == 6) {
-                jobItemsArray.addAll(Arrays.asList(Items.WHITE_WOOL.getDefaultInstance(), ModItems.HUNTERS_SWORD_LEVEL_1.get().getDefaultInstance(), ModItems.HUNTERS_SWORD_LEVEL_2.get().getDefaultInstance(), ModItems.HUNTERS_SWORD_LEVEL_3.get().getDefaultInstance(), ModItems.HUNTERS_SWORD_LEVEL_4.get().getDefaultInstance(), ModItems.HUNTERS_BOW_LEVEL_1.get().getDefaultInstance(), ModItems.HUNTERS_BOW_LEVEL_2.get().getDefaultInstance(), ModItems.HUNTERS_BOW_LEVEL_3.get().getDefaultInstance(), ModItems.HUNTERS_BOW_LEVEL_4.get().getDefaultInstance()));
-            } else if (jobId == 7) {
-                jobItemsArray.addAll(Arrays.asList(ModItems.LUMBERJACK_AXE_LEVEL_1.get().getDefaultInstance(), ModItems.LUMBERJACK_AXE_LEVEL_2.get().getDefaultInstance(), ModItems.LUMBERJACK_AXE_LEVEL_3.get().getDefaultInstance(), ModItems.LUMBERJACK_AXE_LEVEL_4.get().getDefaultInstance()));
-            } else if (jobId == 8) {
-                jobItemsArray.addAll(Arrays.asList(ModItems.MINERS_HAMMER_LEVEL_1.get().getDefaultInstance(), ModItems.MINERS_HAMMER_LEVEL_2.get().getDefaultInstance(), ModItems.MINERS_HAMMER_LEVEL_3.get().getDefaultInstance(), ModItems.MINERS_HAMMER_LEVEL_4.get().getDefaultInstance()));
-            } else if (jobId == 9) {
-                jobItemsArray.addAll(Arrays.asList(ModItems.REINFORCED_IRON_HELMET.get().getDefaultInstance(), ModItems.REINFORCED_IRON_CHESTPLATE.get().getDefaultInstance(), ModItems.REINFORCED_IRON_LEGGINGS.get().getDefaultInstance(), ModItems.REINFORCED_IRON_BOOTS.get().getDefaultInstance(), ModItems.OBSIDIAN_HELMET.get().getDefaultInstance(), ModItems.OBSIDIAN_CHESTPLATE.get().getDefaultInstance(), ModItems.OBSIDIAN_LEGGINGS.get().getDefaultInstance(), ModItems.OBSIDIAN_BOOTS.get().getDefaultInstance(), ModItems.REINFORCED_DIAMOND_HELMET.get().getDefaultInstance(), ModItems.REINFORCED_DIAMOND_CHESTPLATE.get().getDefaultInstance(), ModItems.REINFORCED_DIAMOND_LEGGINGS.get().getDefaultInstance(), ModItems.REINFORCED_DIAMOND_BOOTS.get().getDefaultInstance(), ModItems.REINFORCED_NETHERITE_HELMET.get().getDefaultInstance(), ModItems.REINFORCED_NETHERITE_CHESTPLATE.get().getDefaultInstance(), ModItems.REINFORCED_NETHERITE_LEGGINGS.get().getDefaultInstance(), ModItems.REINFORCED_NETHERITE_BOOTS.get().getDefaultInstance()));
+        if (hasJobSelected()) {
+            if (activeRightButton == 1) {
+                for (int i = 0; i < selectedJobCraftableStacks.size(); i++) {
+                    int xOffset = x + 176 + i % 5 * 27;
+                    int l = i / 5;
+                    int yOffset = y + 20 + l * 27 + 2;
+                    itemRenderer.renderAndDecorateItem(selectedJobCraftableStacks.get(i), xOffset, yOffset);
+                }
             }
-            for (int i = 0; i < jobItemsArray.size(); i++) {
-                int xOffset = x + 176 + i % 5 * 27;
-                int l = i / 5;
-                int yOffset = y + 20 + l * 27 + 2;
-                itemRenderer.renderAndDecorateItem(jobItemsArray.get(i), xOffset, yOffset);
-            }
-        }
-        if (jobId >= 0) {
-            if (getSelectedJobLevel() != 0 && Config.DISPLAY_JOB_IN_CHAT_AND_TAB.get()) {
-                if (array[62] == jobId + 1)
+            if (getSelectedJobLevel() != 0 && isJobDisplayEnabled()) {
+                if (getDisplay() == jobId + 1)
                     itemRenderer.renderAndDecorateItem(Items.NAME_TAG.getDefaultInstance(), startX + 328, startY + 11);
                 else
                     itemRenderer.renderAndDecorateItem(Items.NAME_TAG.getDefaultInstance(), startX + 327, startY + 11);
@@ -732,13 +660,13 @@ public class JobsScreen extends Screen {
         mouseY = mouseY - startY;
 
         //DISPLAY AND BOSSBAR
-        if (jobId >= 0) {
+        if (hasJobSelected()) {
             if (getSelectedJobLevel() != 0) {
                 //DISPLAY
-                if (Config.DISPLAY_JOB_IN_CHAT_AND_TAB.get()) {
+                if (isJobDisplayEnabled()) {
                     if (isBetween(mouseX, mouseY, imageWidth, 6, imageWidth + 21, 31)) {
                         String job;
-                        if (jobId + 1 == array[62])
+                        if (jobId + 1 == getDisplay())
                             job = "NONE";
                         else
                             job = Jobs.getEnglishString(jobId);
@@ -748,7 +676,7 @@ public class JobsScreen extends Screen {
                 }
                 //BOSSBAR
                 if (isBetween(mouseX, mouseY, imageWidth, 35, imageWidth + 21, 60)) {
-                    if (jobId == array[63]) ModPacketHandler.INSTANCE.sendToServer(new PacketBossBarr("NONE"));
+                    if (jobId == getActiveBossBar()) ModPacketHandler.INSTANCE.sendToServer(new PacketBossBarr("NONE"));
                     else ModPacketHandler.INSTANCE.sendToServer(new PacketBossBarr(Jobs.getEnglishString(jobId)));
                     ModPacketHandler.INSTANCE.sendToServer(new PacketOpenMenu(jobId, activeLeftButton, activeRightButton, selectedButton, scrollOffs, startIndex));
                 }
@@ -808,26 +736,26 @@ public class JobsScreen extends Screen {
             activeRightButton = 3;
         }
         // RIGHT BUTTONS
-        if (jobId != -1) {
+        if (hasJobSelected()) {
             // JOB START STOP BUTTON
             if (activeRightButton == 0) {
                 if (isBetween(mouseX, mouseY, 169, 132, 169 + 138, 132 + 18)) {
                     Minecraft.getInstance().getSoundManager().play(SimpleSoundInstance.forUI(SoundEvents.UI_BUTTON_CLICK, 1.0F));
                     if (getSelectedJobLevel() == 0) {
-                        if (array[21] < Config.AMOUNT_OF_FREE_JOBS.get()) {
+                        if (hasFreeClaimableJobs()) {
                             openConfirmScreen(Component.translatable("confirm.start"), "start", 0);
                         } else {
-                            if (array[20] >= Config.JOB_START_COST.get())
-                                openConfirmScreen(Component.translatable("confirm.start_paid", Config.JOB_START_COST.get()), "start_paid", 0);
+                            if (getCoins() >= getJobStartCost())
+                                openConfirmScreen(Component.translatable("confirm.start_paid", getJobStartCost()), "start_paid", 0);
                             else
                                 openConfirmScreen(Component.translatable("confirm.not_enough_coins_start"), "not_enough_coins_start", 0);
 
                         }
-                    } else if (getSelectedJobLevel() == Config.JOB_LEVEL_TO_STOP_JOB_FOR_FREE.get()) {
+                    } else if (getSelectedJobLevel() == getJobLevelToStopJobForFree()) {
                         openConfirmScreen(Component.translatable("confirm.stop_free"), "stop_free", 0);
                     } else {
-                        if (array[20] >= Config.JOB_STOP_COST.get())
-                            openConfirmScreen(Component.translatable("confirm.stop", Config.JOB_STOP_COST.get()), "stop", 0);
+                        if (getCoins() >= getJobStopCost())
+                            openConfirmScreen(Component.translatable("confirm.stop", getJobStopCost()), "stop", 0);
                         else
                             openConfirmScreen(Component.translatable("confirm.not_enough_coins_stop"), "not_enough_coins_stop", 0);
 
@@ -849,25 +777,25 @@ public class JobsScreen extends Screen {
             }
             // POWERUPS
             if (activeRightButton == 2) {
-                int clicked = 0;
-                if (isBetween(mouseX, mouseY, 169, 27, 169 + 139, 27 + 18)) clicked = 1;
-                if (isBetween(mouseX, mouseY, 169, 27 + 25, 169 + 139, 27 + 18 + 25)) clicked = 2;
-                if (isBetween(mouseX, mouseY, 169, 27 + 50, 169 + 139, 27 + 18 + 50)) clicked = 3;
-                if (clicked != 0) {
-                    if (array[21 + (jobId * 3) + clicked] == 1 || array[21 + (jobId * 3) + clicked] == 2) {
-                        ModPacketHandler.INSTANCE.sendToServer(new PacketMenuPowerUp(true, Jobs.getJobFromInt(jobId), clicked + 1));
+                int clickedPowerupID = 0;
+                if (isBetween(mouseX, mouseY, 169, 27, 169 + 139, 27 + 18)) clickedPowerupID = 1;
+                if (isBetween(mouseX, mouseY, 169, 27 + 25, 169 + 139, 27 + 18 + 25)) clickedPowerupID = 2;
+                if (isBetween(mouseX, mouseY, 169, 27 + 50, 169 + 139, 27 + 18 + 50)) clickedPowerupID = 3;
+                if (clickedPowerupID != 0) {
+                    if (hasBoughtPowerup(clickedPowerupID)) {
+                        ModPacketHandler.INSTANCE.sendToServer(new PacketMenuPowerUp(true, Jobs.getJobFromInt(jobId), clickedPowerupID + 1));
                         ModPacketHandler.INSTANCE.sendToServer(new PacketOpenMenu(jobId, activeLeftButton, activeRightButton, selectedButton, scrollOffs, startIndex));
                     } else {
                         //Check if player has enough coins to buy a power-up
-                        if (array[20] >= Config.POWERUP_COST.get()) {
+                        if (getCoins() >= getPowerupCost()) {
                             //Check is the player has the job.
                             if (getSelectedJobLevel() != 0)
-                                openConfirmScreen(Component.translatable("confirm.powerup"), "powerup", clicked);
+                                openConfirmScreen(Component.translatable("confirm.powerup"), "powerup", clickedPowerupID);
                             else {
-                                openConfirmScreen(Component.translatable("confirm.job_not_enabled"), "job_not_enabled", clicked);
+                                openConfirmScreen(Component.translatable("confirm.job_not_enabled"), "job_not_enabled", clickedPowerupID);
                             }
                         } else {
-                            openConfirmScreen(Component.translatable("confirm.not_enough_coins_powerup"), "not_enough_coins_powerup", clicked);
+                            openConfirmScreen(Component.translatable("confirm.not_enough_coins_powerup"), "not_enough_coins_powerup", clickedPowerupID);
                         }
                     }
                     Minecraft.getInstance().getSoundManager().play(SimpleSoundInstance.forUI(SoundEvents.UI_BUTTON_CLICK, 1.0F));
@@ -877,13 +805,36 @@ public class JobsScreen extends Screen {
                         ModPacketHandler.INSTANCE.sendToServer(new PacketSwitchSuperpower(Jobs.getJobFromInt(jobId)));
                         ModPacketHandler.INSTANCE.sendToServer(new PacketOpenMenu(jobId, activeLeftButton, activeRightButton, selectedButton, scrollOffs, startIndex));
                     } else {
-                        openConfirmScreen(Component.translatable("error.level.must_be_100"), "must_be_level_100", clicked);
+                        openConfirmScreen(Component.translatable("error.level.must_be_100"), "must_be_level_100", clickedPowerupID);
                     }
                     Minecraft.getInstance().getSoundManager().play(SimpleSoundInstance.forUI(SoundEvents.UI_BUTTON_CLICK, 1.0F));
                 }
             }
         }
         return super.mouseClicked(mouseX, mouseY, clickType);
+    }
+
+    private boolean hasJobSelected() {
+        return jobId != -1;
+    }
+
+    private ItemStack getItemStack1(double mouseX, double mouseY) {
+        if (!hasJobSelected()) return ItemStack.EMPTY;
+
+        mouseX = mouseX - 150D;
+
+        if (getSelectedJob().is(Jobs.ALCHEMIST)) {
+
+        }
+
+        for (int i = 0; i < selectedJobCraftableStacks.size(); i++) {
+            if (isBetween(mouseX, mouseY,
+                    22 + (i % 5) * 27, 18 + (i / 5) * 27,
+                    46 + (i % 5) * 27, 42 + (i / 5) * 27)) {
+                //TODO COMPLETE THIS
+            }
+        }
+        return ItemStack.EMPTY;
     }
 
     private ItemStack getItemStack(double mouseX, double mouseY) {
@@ -1112,18 +1063,37 @@ public class JobsScreen extends Screen {
         return mouseX >= mouseXTop && mouseY >= mouseYTop && mouseX <= mouseXBottom && mouseY <= mouseYBottom;
     }
 
+    private @Nullable Jobs getSelectedJob() {
+        if (!hasJobSelected()) return null;
+        return Jobs.getJobFromInt(jobId);
+    }
+
+    private CompoundTag getSelectedJobData() {
+        if (getSelectedJob() == null) return new CompoundTag();
+        return this.dataTag.getCompound(getSelectedJob().name());
+    }
+
+    private CompoundTag getJobData(Jobs job) {
+        return this.dataTag.getCompound(job.name());
+    }
+
     private int getSelectedJobLevel() {
-        if (jobId != -1) return array[jobId * 2];
-        return -1;
+        return getSelectedJobData().getInt("Level");
     }
 
     private int getSelectedJobEXP() {
-        if (jobId != -1) return array[jobId * 2 + 1];
-        return -1;
+        return getSelectedJobData().getInt("Exp");
+    }
+
+    private int getJobLevel(Jobs job) {
+        return getJobData(job).getInt("Level");
+    }
+
+    private int getJobEXP(Jobs job) {
+        return getJobData(job).getInt("Exp");
     }
 
     private int getSelectedJobMaxEXP() {
-        if (getSelectedJobLevel() == 0) return 0;
         return LevelHandler.calcExp(getSelectedJobLevel());
     }
 
@@ -1134,24 +1104,24 @@ public class JobsScreen extends Screen {
 
     private void drawNoJobSelected(PoseStack poseStack, String string) {
         for (int i = 1; i < 6; i++) {
-            drawCenteredStringNew(poseStack, font, ChatColor.darkGray() + Component.translatable("jobsplus.gui.no_job_selected." + string + "." + i).getString(), startX + (imageWidth + 150) / 2, startY + 42 + (i * 9), 16777215);
+            drawCenteredStringNew(poseStack, font, ChatColor.darkGray() + JobsPlus.translatable("gui.no_job_selected." + string + "." + i).getString(), startX + (imageWidth + 150) / 2, startY + 42 + (i * 9), 16777215);
         }
     }
 
     private void drawJobInfo(PoseStack poseStack) {
         for (int i = 1; i < 10; i++) {
-            drawCenteredStringNew(poseStack, font, ChatColor.darkGray() + Component.translatable("jobsplus.gui.info." + Jobs.getEnglishString(jobId).toLowerCase() + "." + i, "" + ChatColor.boldWhite(), "" + ChatColor.darkGray(), "" + ChatColor.boldWhite(), "" + ChatColor.darkGray()).getString(), startX + (imageWidth + 150) / 2, startY + 35 + (i * 9), 16777215);
+            drawCenteredStringNew(poseStack, font, ChatColor.darkGray() + JobsPlus.translatable("gui.info." + Jobs.getEnglishString(jobId).toLowerCase() + "." + i, "" + ChatColor.boldWhite(), "" + ChatColor.darkGray(), "" + ChatColor.boldWhite(), "" + ChatColor.darkGray()).getString(), startX + (imageWidth + 150) / 2, startY + 35 + (i * 9), 16777215);
         }
     }
 
     private String getTCText(int num) {
-        String[] split = (Component.translatable("jobsplus.gui.exp." + Jobs.getEnglishString(jobId).toLowerCase() + "." + num).getString()).split(">text:");
+        String[] split = (JobsPlus.translatable("gui.exp." + Jobs.getEnglishString(jobId).toLowerCase() + "." + num).getString()).split(">text:");
         return split.length > 1 ? split[1] : "";
     }
 
     private int getTCTextColor(int num) {
-        String replace = (Component.translatable("jobsplus.gui.exp." + Jobs.getEnglishString(jobId).toLowerCase() + "." + num).getString()).split(">text:")[0].replace("color:<", "");
-        return isNumeric(replace) ? Integer.parseInt(replace) : 16777215;
+        String replace = (JobsPlus.translatable("gui.exp." + Jobs.getEnglishString(jobId).toLowerCase() + "." + num).getString()).split(">text:")[0].replace("color:<", "");
+        return StringUtils.isNumeric(replace) ? Integer.parseInt(replace) : 16777215;
     }
 
     public void drawnBigJobTitle(PoseStack poseStack) {
@@ -1160,15 +1130,15 @@ public class JobsScreen extends Screen {
         font.draw(poseStack, getSelectedJobLevel() != 0 ? ChatColor.boldGreen() + Jobs.getString(jobId) : ChatColor.boldRed() + Jobs.getString(jobId), (startX + 156) / 2F, (startY + 5) / 2F, 16777215);
         poseStack.popPose();
         if (getSelectedJobLevel() != 0) {
-            font.draw(poseStack, ChatColor.darkGray() + Component.translatable("jobsplus.gui.level", ChatColor.reset(), getSelectedJobLevel()).getString(), startX + 156, startY + 22, 16777215);
+            font.draw(poseStack, ChatColor.darkGray() + JobsPlus.translatable("gui.level", ChatColor.reset(), getSelectedJobLevel()).getString(), startX + 156, startY + 22, 16777215);
             if (getSelectedJobLevel() != 100)
-                font.draw(poseStack, ChatColor.darkGray() + Component.translatable("jobsplus.gui.exp", ChatColor.reset(), "[" + getSelectedJobEXP() + "/" + getSelectedJobMaxEXP() + "]").getString(), startX + 216, startY + 22, 16777215);
+                font.draw(poseStack, ChatColor.darkGray() + JobsPlus.translatable("gui.exp", ChatColor.reset(), "[" + getSelectedJobEXP() + "/" + getSelectedJobMaxEXP() + "]").getString(), startX + 216, startY + 22, 16777215);
         } else {
-            font.draw(poseStack, ChatColor.darkGray() + Component.translatable("jobsplus.gui.want_this_job").getString(), startX + 156, startY + 22, 16777215);
-            if (array[21] < 2) {
-                drawRightAlignedString(poseStack, font, ChatColor.darkGray() + Component.translatable("jobsplus.gui.cost", ChatColor.reset(), 0).getString(), startX + imageWidth - 10, startY + 22, 16777215);
+            font.draw(poseStack, ChatColor.darkGray() + JobsPlus.translatable("gui.want_this_job").getString(), startX + 156, startY + 22, 16777215);
+            if (hasFreeClaimableJobs()) {
+                drawRightAlignedString(poseStack, font, ChatColor.darkGray() + JobsPlus.translatable("gui.cost", ChatColor.reset(), 0).getString(), startX + imageWidth - 10, startY + 22, 16777215);
             } else {
-                drawRightAlignedString(poseStack, font, ChatColor.darkGray() + Component.translatable("jobsplus.gui.cost", ChatColor.reset(), 10).getString(), startX + imageWidth - 10, startY + 22, 16777215);
+                drawRightAlignedString(poseStack, font, ChatColor.darkGray() + JobsPlus.translatable("gui.cost", ChatColor.reset(), 10).getString(), startX + imageWidth - 10, startY + 22, 16777215);
             }
         }
         font.draw(poseStack, ChatFormatting.STRIKETHROUGH + "                                        ", startX + 156, startY + 28, 16777215);
@@ -1206,4 +1176,72 @@ public class JobsScreen extends Screen {
         return false;
     }
 
+    private int getCoins() {
+        return this.dataTag.getInt("Coins");
+    }
+
+    private int getAmountOfEnabledJobs() {
+        return this.dataTag.getInt("JobsEnabled");
+    }
+
+    private int getAmountOfFreeJobs() {
+        return this.dataTag.getInt("AmountOfFreeJobs");
+    }
+
+    private boolean hasFreeClaimableJobs() {
+        return getAmountOfEnabledJobs() < getAmountOfFreeJobs();
+    }
+
+    private int getJobStartCost() {
+        return this.dataTag.getInt("JobStartCost");
+    }
+
+    private int getJobStopCost() {
+        return this.dataTag.getInt("JobStopCost");
+    }
+
+    private int getJobLevelToStopJobForFree() {
+        return this.dataTag.getInt("JobLevelToStopJobForFree");
+    }
+
+    private int getPowerupCost() {
+        return this.dataTag.getInt("PowerupCost");
+    }
+
+    private boolean isJobDisplayEnabled() {
+        return this.dataTag.getBoolean("DisplayJobConfig");
+    }
+
+    private int getDisplay() {
+        return this.dataTag.getInt("Display");
+    }
+
+    private int getActiveBossBar() {
+        return this.dataTag.getInt("ActiveBossBar");
+    }
+
+    private int getSelctedJobPowerupState(int powerupID) {
+        if (powerupID != 1 && powerupID != 2 && powerupID != 3) return 0;
+        return getSelectedJobData().getInt("Powerup" + powerupID);
+    }
+
+    private boolean hasBoughtPowerup(int powerupID) {
+        return getSelctedJobPowerupState(powerupID) != 0;
+    }
+
+    private boolean hasPowerupActive(int powerupID) {
+        return getSelctedJobPowerupState(powerupID) == 1;
+    }
+
+    private boolean hasPowerupDisabled(int powerupID) {
+        return getSelctedJobPowerupState(powerupID) == 2;
+    }
+
+    private int getSelectedJobSuperpowerState() {
+        return getSelectedJobData().getInt("Superpower");
+    }
+
+    private boolean hasSelectedJobSuperpowerEnabled() {
+        return getSelectedJobSuperpowerState() == 0;
+    }
 }
